Fixes spacing of links

--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ canvas {
   display: block;
   z-index: -1;
 }
-
+#repoLink {
+  position: relative;
+  top: 20px;
+  background-color: rgb(121, 250, 197);
+  border: 5px solid hotpink;
+}
 #myName {
   background-color: rgb(121, 250, 197);
   border: 7px solid hotpink;
